# python-mapnik

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  bootstrap.sh  build.py  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: build.yml
cmake/: vcpkg_setup.cmake
demo/python/: map.xml  rundemo.py
docs/: getting-started.md
mapnik/: __init__.py  conversions.py  mapnik_settings.py  paths.py  printing.py
mapnik/printing/: __init__.py  formats.py  scales.py
packaging/mapnik/: __init__.py  mapnik_settings.py
scripts/: setup_mason.sh  setup_postgres.sh
src/: boost_std_shared_shim.hpp  create_datasource.hpp  mapnik_building_symbolizer.cpp  mapnik_color.cpp  mapnik_composite_modes.cpp  mapnik_coord.cpp  mapnik_datasource.cpp  mapnik_datasource_cache.cpp  mapnik_debug_symbolizer.cpp  mapnik_dot_symbolizer.cpp  mapnik_enumeration.hpp  mapnik_enumeration_wrapper_converter.hpp  mapnik_envelope.cpp  mapnik_expression.cpp  mapnik_feature.cpp  mapnik_featureset.cpp  mapnik_font_engine.cpp  mapnik_fontset.cpp  mapnik_gamma_method.cpp  mapnik_geometry.cpp  mapnik_grid.cpp  mapnik_grid_view.cpp  mapnik_group_symbolizer.cpp  mapnik_image.cpp  mapnik_image_view.cpp  mapnik_label_collision_detector.cpp  mapnik_layer.cpp  mapnik_line_pattern_symbolizer.cpp  mapnik_line_symbolizer.cpp  mapnik_logger.cpp  mapnik_map.cpp  mapnik_markers_symbolizer.cpp  mapnik_palette.cpp  mapnik_parameters.cpp  mapnik_placement_finder.cpp  mapnik_point_symbolizer.cpp  mapnik_polygon_pattern_symbolizer.cpp  mapnik_polygon_symbolizer.cpp  mapnik_proj_transform.cpp  mapnik_projection.cpp  (+23 more)
test/: run_tests.py  visual.py
test/python_tests/: agg_rasterizer_integer_overflow_test.py  box2d_test.py  buffer_clear_test.py  cairo_test.py  color_test.py  compare_test.py  compositing_test.py  copy_test.py  csv_test.py  datasource_test.py  datasource_xml_template_test.py  extra_map_props_test.py  feature_id_test.py  feature_test.py  filter_test.py  fontset_test.py  geojson_plugin_test.py  geometry_io_test.py  geowave_test.py  grayscale_test.py  image_encoding_speed_test.py  image_filters_test.py  image_test.py  image_tiff_test.py  introspection_test.py  json_feature_properties_test.py  layer_buffer_size_test.py  layer_modification_test.py  layer_test.py  load_map_test.py  map_query_test.py  mapnik_logger_test.py  mapnik_test_data_test.py  markers_complex_rendering_test.py  memory_datasource_test.py  multi_tile_raster_test.py  object_test.py  ogr_and_shape_geometries_test.py  ogr_test.py  osm_test.py  (+27 more)
