[build-system]
requires = [
         "setuptools >= 74.1.2",
         "pybind11 >= 2.13.5",
]
build-backend = "setuptools.build_meta"

[project]
name = "mapnik"
version = "4.0.3.beta"
description = "Python bindings for Mapnik"
license = { text = "GNU LESSER GENERAL PUBLIC LICENSE"}
keywords = ["mapnik", "beautiful maps", "cartography", "python-mapnik"]
classifiers = [
   "Development Status :: 4 - Beta",
]
authors = [
{name= "Artem Pavlenko", email = "artem@mapnik.org"},
]
maintainers = [
{name= "Artem Pavlenko", email = "artem@mapnik.org"},
]

requires-python = ">= 3.8"

[project.urls]
Homepage = "https://mapnik.org"
Documentation = "https://github.com/mapnik/python-mapnik/wiki"
Repository = "https://github.com/mapnik/python-mapnik"
"Bug Tracker" = "https://github.com/mapnik/python-mapnik/issues"
Changelog = "https://github.com/mapnik/python-mapnik/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "test/python_tests",
]