[build-system]
requires = [
         "setuptools >= 80.9.0",
         "pybind11 >= 3.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mapnik"
version = "4.1.1.beta"
description = "Python bindings for Mapnik"
license = "LGPL-2.1-or-later"

keywords = ["mapnik", "beautiful maps", "cartography", "python-mapnik"]
classifiers = [
   "Development Status :: 4 - Beta",
]
authors = [
{name= "Artem Pavlenko", email = "artem@mapnik.org"},
]
maintainers = [
{name= "Artem Pavlenko", email = "artem@mapnik.org"},
]

requires-python = ">= 3.8"

[project.urls]
Homepage = "https://mapnik.org"
Documentation = "https://github.com/mapnik/python-mapnik/wiki"
Repository = "https://github.com/mapnik/python-mapnik"
"Bug Tracker" = "https://github.com/mapnik/python-mapnik/issues"
Changelog = "https://github.com/mapnik/python-mapnik/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "test/python_tests",
]