[build-system]
requires = [
         "setuptools >= 80.9.0",
         "pybind11 >= 3.0.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "mapnik"
version = "4.2.2"
description = "Python bindings for Mapnik"
license = "LGPL-2.1-or-later"

keywords = ["mapnik", "beautiful maps", "cartography", "python-mapnik"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

authors = [
{name= "Artem Pavlenko", email = "artem@mapnik.org"},
]
maintainers = [
{name= "Artem Pavlenko", email = "artem@mapnik.org"},
]

requires-python = ">= 3.9"

[project.urls]
Homepage = "https://mapnik.org"
Documentation = "https://github.com/mapnik/python-mapnik/wiki"
Repository = "https://github.com/mapnik/python-mapnik"
Issues = "https://github.com/mapnik/python-mapnik/issues"
Changelog = "https://github.com/mapnik/python-mapnik/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "test/python_tests",
]